--- a/templates/chatRoom.html
+++ b/templates/chatRoom.html
@@ -5,7 +5,7 @@
 <input id="msg" placeholder="Type message...">
 
 <script>
-let ws = new WebSocket("ws://localhost:8765");
+let ws = new WebSocket("ws://192.168.1.8:8765");
 
 ws.onmessage = e => {
     chat.value += e.data + "\n";
